static/css/style.css
/* ... */
.list-form {
    margin-bottom: 1rem;
}

.heading-img {
    padding: 1rem;
}

.page-link {
    color: #0B5657;
}

.page-link:hover {
    color: #9500a0;
}

.footer-container {
    margin-bottom: 1.5rem;
    margin-top: 1.5rem;
    width: 80%;
    height: 84px;
    margin-left: 10%;
    padding-top: 0.5rem;
    text-align: center;
    color: white;
    background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png);
    background-color: #0ca9a9;
    border: solid 2px white;
    border-radius: 4px;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.list-text {
    font-size: large;
    color: black;
    padding-top: 1rem;
    text-align: center;
    background: rgba(255, 255, 255, 0.801);
}

.list-separator-rule {
    color: #0B5657;
    width: 50%;
    margin-left: 25%;
    margin-top: 1rem;
}

.pagination {
    margin-top: 1rem;
}

.pag-pages {
    text-align: center;
    margin-top: 1rem;
    margin-bottom: 1rem;
    color: #1b5757;
}

.pupil-id-text {
    display: none;
}

.link-row {
    text-align: center;
}

.record-text {
    text-align: center;
    color: #000;
}

.form-center {
    display: flex;
    justify-content: space-evenly;
}

h1,
h2 {
    color: white;
    text-align: center;
}

.hero-text {
    font-family: lato, sans-serif;
    text-transform: uppercase;
    letter-spacing: 5px;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.hero-text h1 {
    font-size: x-large;
    background: #0B5657;
    border-radius: 4px;
    padding: 1rem;
}

#hero-strap-text {
    font-family: Helvetica, sans-serif;
    font-size: medium;
    text-transform: none;
    background: #0B5657;
    border-radius: 4px;
    padding: 1rem;
}

.main-bg {
    background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/vertical-waves.png"),
        linear-gradient(to right, #ffffff, #ffffff, #23BBBB);
}

.card-item {
    width: 95%;
    min-height: 550px;
    color: black;
    background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png");
    background-color: #0ca9a9;
    border: solid 2px white;
    border-radius: 4px;
    margin-top: 1rem;
    margin-left: 2.5%;
    margin-bottom: 1.5rem;
    padding-bottom: 20%;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

#loading {
    display: none;
    position: fixed;
    top: 50%;
    left: 50%;
    background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png);
    transform: translate(-50%, -50%);
    border-radius: 10px;
    border: 5px solid whitesmoke;
    background-color: #0ca9a9;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
    width: 100%;
    height: 100%;
    z-index: 9999;
}

.loading-txt {
    color: #ffffff;
    margin: 5%;
    font-size: 220%;
    text-align: center;
}

#load-gif {
    width: 40%;
    margin-left: 30%;
    margin-top: 15%;
    border-radius: 4px;
}

.passport-inst {
    color: #ffe294;
    width: 80%;
    margin-left: 10%;
    background-color: #0B5657;
    padding: 0.5rem;
    padding-top: 1rem;
    border-radius: 4px;
}

.form-group{
    text-align: left;
    margin-bottom: 2rem;
    width: 94%;
    margin-left: 3%;
    background-color: #0B5657;
    padding: 1rem;
    border-radius: 4px;
}

.form-group a {
    color: #ffe294;
}

.invalid-feedback {
    color: #ffe294;
    text-align: center;
    font-size: large;
    font-style: italic;
}

.form-container {
    width: 90%;
    background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png);
    background-color: #0ca9a9;
    border: solid 2px white;
    border-radius: 4px;
    margin-bottom: 2rem;
    padding-left: 0%;
    padding-top: 2rem;
    padding-bottom: 6rem;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.form-row {
    text-align: center;
    width: 80%;
    margin-left: 10%;
}

.form-center-align {
    text-align: -webkit-center;
}

.block-text {
    background: white;
    text-align: center;
    width: 95%;
    padding: 1rem;
    margin-top: 1rem;
    margin-left: 2.5%;
    border-radius: 4px;
}

.card-img-container {
   width: 100%;
   height: 260px;
   display: flex;
}

.card-img-top {
    width: 90%;
    border: solid 2px white;
    border-radius: 4px;
    margin-left: 5%;
    margin-top: 5%;
    margin-bottom: 1.5rem;
    object-fit: scale-down;
    background: #ffffff;
}

.card-body {
    width: 90%;
    min-height: 150px;
    background: white;
    margin-left: 5%;
    border-radius: 4px;
    flex: 0;
}

.card-buttons {
    display: inline-flex;
    justify-content: center;
}

.hero-image {
    border: solid 2px white;
    border-radius: 4px;
    width: 100%;
}

.record-bg-light {
    background-color:#ffffff;
    padding: 0.5rem;
    padding-top: 1rem;
}

.record-bg-dark {
    background-color: #0B5657;
    text-align: center;
    padding: 0.5rem;
    padding-top: 1rem;
}

.record-bg-light a {
    color: #0B5657;
}

.record-bg-dark a {
    color: #ffffff;
}

.record-bg-light a:hover {
    color: #178484;
    text-decoration: underline;
}

.record-bg-dark a:hover {
    color: antiquewhite;
    text-decoration: underline;
}
.passport-container {
    background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png);
    background-color: #0ca9a9;
    border: solid 2px white;
    border-radius: 4px;
    margin-bottom: 2rem;
    padding: 2rem;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.passport-separator-rule {
    color: white;
    width: 50%;
    margin-left: 25%;
    margin-top: 1rem;
}

.passport-item {
    max-height: 400px;
    max-width: 100%;
    margin-top: 1rem;
    margin-bottom: 1rem;
    border-radius: 4px;
}

.passport-card {
    width: 90%;
    padding: 1.5rem;
    background-color: white;
    border: solid 2px #0B5657;
    border-radius: 4px;
    margin-top: 1.5rem;
    padding-bottom: 20%;
    word-break: break-word;
    text-align: center;
}
/* ... */

